# exercises

./: CMakeLists.txt  ex1.cpp  ex10.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
